--- a/colab.html
+++ b/colab.html
@@ -2,7 +2,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <meta property="og:image" content="https://grcodeclub.github.io/file/background/4.png"/>
-        <meta property="og:title" content="Σύστημα">
+        <meta property="og:title" content="Colab">
         <script src="https://grcodeclub.github.io/javascript/jquery.js"></script>
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/header_and_footer.css">
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/main.css">
@@ -25,7 +25,7 @@
                     <tr>
                         <td><img src="https://grcodeclub.github.io/file/logo_and_graphic/logo.png" class="logo"/></td>
                         <td><h1 class="header_text"><span class="header_text">  GrCode Club </span></h1></td>
-                        <td><a href="https://github.com/GrCodeClub/grcodeclub.github.io/edit/main/post/colab.html" target="_blank"><img src="https://grcodeclub.github.io/file/logo_and_graphic/edit.png"  width="60px"></a></td>
+                        <td><a href="https://github.com/GrCodeClub/programming/edit/main/colab.html" target="_blank"><img src="https://grcodeclub.github.io/file/logo_and_graphic/edit.png"  width="60px"></a></td>
                     </tr>
                 </table> 
             </div> <!--ΤΕΛΟΣ Header show_desktop-->
@@ -33,8 +33,8 @@
             <div class="Menu"> <!--ΑΡΧΗ Menu show_desktop-->
                 <div id="sidebarMenu" style="  overflow: auto;">
                     <ul class="sidebarMenuInner">
-                        <li><a href="https://grcodeclub.github.io/system/main.html">Λειτουργικό Σύστημα</a></li>
-                        <li><a href="https://grcodeclub.github.io/programming/main.html">Προγραμματισμός</a></li>
+                        <li><a href="https://grcodeclub.github.io/system">Λειτουργικό Σύστημα</a></li>
+                        <li><a href="https://grcodeclub.github.io/programming">Προγραμματισμός</a></li>
                         <li><a href="https://grcodeclub.github.io">GrCode Club</a></li>
                     </ul>
                   </div><!--Menu end-->
