--- a/c.html
+++ b/c.html
@@ -73,6 +73,8 @@
                         <ul class="list">
                         <li><a href="./c/command.html" class="link">Εντολές</a></li>
                         <li><a href="./c/stract.html" class="link">Δομή - Struct</a></li>
+                        <li><a href="./c/string.html" class="link">Συμβολοσειρές</a></li>
+
                         </ul>
                         <ul class="list">
                             <li><a href="./c/library.html" class="link">Βιβλιοθήκες</a></li>
