--- a/c/string.html
+++ b/c/string.html
@@ -67,7 +67,7 @@
             </section> <!--Τέλος εμφάνιση σε κινητά-->
 
             <div class="Text"> <!--Αρχή Κειμένου-->
-                <a href="../c++.html"><img src="https://grcodeclub.github.io/file/logo_and_graphic/back.png" class="logo_back"></a>
+                <a href="../c.html"><img src="https://grcodeclub.github.io/file/logo_and_graphic/back.png" class="logo_back"></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
 
                     <h1 class="title">Συμβολοσειρές</h1>
