--- a/c++.html
+++ b/c++.html
@@ -70,7 +70,7 @@
                     <div class="list-container">
                     <ul class="list">
                       <li><a href="./c++/command.html" class="link">Εντολές</a></li>
-                      <li><a href="./c++/string.html" class="link">Συμβολοσειρές</a></li>
+                      <li><a href="https://grcodeclub.github.io/programming/c/command.html" class="link">Συμβολοσειρές</a></li>
                     </ul>
                     <ul class="list">
                         <li><a href="./c++/library.html" class="link">Βιβλιοθήκες</a></li>
