--- a/c++/library.html
+++ b/c++/library.html
@@ -66,11 +66,12 @@
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <a href="../c++.html"><img src="https://grcodeclub.github.io/file/logo_and_graphic/back.png" class="logo_back"></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
-
                     <h1 class="title">Bιβλιοθήκες </h1>
+                    <p><a class="link" href="https://grcodeclub.github.io/programming/c/library.html">Bιβλιοθήκες C</a></p>
 
                     <div class="search"><input type="input" class="form__field" placeholder="Αναζήτηση Βιβλιοθήκης" id='searchInput'/></div>
-                           <table id="table" class="style2">
+                        <br>
+                    <table id="table" class="style2">
                                 <tr>
                                     <th>Βιβλιοθήκη</th>
                                     <th>Περιγραφή</th>
@@ -86,10 +87,6 @@
                                 <tr class="style2">
                                     <td><code>#include &lt;vector&gt;</code></td>
                                     <td>Δυναμικά διανύσματα</td>
-                                </tr>
-                                <tr class="style2">
-                                    <td><code>#include &lt;string&gt;</code></td>
-                                    <td>Αλυσίδες κειμένου</td>
                                 </tr>
                                 <tr class="style2">
                                     <td><code>#include &lt;algorithm&gt;</code></td>
