--- a/java/project.html
+++ b/java/project.html
@@ -1,12 +1,10 @@
-
-
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <meta property="og:image" content="https://grcodeclub.github.io/file/background/3.png"/>
         <meta property="og:title" content="Γλώσσα προγραμματισμού Java | Project">
         <script src="https://grcodeclub.github.io/javascript/jquery.js"></script>
-        <script src="https://grcodeclub.github.io/programming/javascript/menu.js"></script>
+        <script src="https://grcodeclub.github.io/programming/menu.js"></script>
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/header_and_footer.css">
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/main.css">
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/text.css">
