--- a/markdown.html
+++ b/markdown.html
@@ -67,7 +67,7 @@
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                    <h1 class="title">Markdown</h1>
                     <hr>
-                    <p><a href="https://grcodeclub.github.io/tools/markdown.html" target="_blank" class="link">Markdown Preview</a></p>
+                    <p><a href="https://grcodeclub.github.io/tools/markdown.html" class="link">Markdown Preview</a></p>
                     <hr>
                     <p>Κείμενο</p>
                     <div class="bg_preview">
