--- a/c.html
+++ b/c.html
@@ -78,7 +78,7 @@
                         </ul>
                         <ul class="list">
                             <li><a href="./c/library.html" class="link">Βιβλιοθήκες</a></li>
-                             <li><a href="./c/examples.html" class="link">Παραδείγματα</a></li>
+                             <li><a href="./c/code.html" class="link">Κώδικας</a></li>
                         </ul>
                   </div>
                   <script src="https://grcodeclub.github.io/javascript/search_list.js"></script>
