--- a/c/code.html
+++ b/c/code.html
@@ -43,7 +43,7 @@ select option {
                         <tr>
                             <td><img src="https://grcodeclub.github.io/file/logo_and_graphic/logo.png" class="logo"/></td>
                             <td><h1 class="header_text"><span class="header_text">  GrCode Club </span></h1></td>
-                            <td><a href="#" target="_blank"><img src="https://grcodeclub.github.io/file/logo_and_graphic/edit.png"  width="60px"></a></td>
+                            <td><a href="https://github.com/GrCodeClub/programming/edit/main/c/code.html" target="_blank"><img src="https://grcodeclub.github.io/file/logo_and_graphic/edit.png"  width="60px"></a></td>
                         </tr>
                     </table> 
                 </div> <!--Τέλος Επικεφαλίδας-->
@@ -114,7 +114,7 @@ select option {
                         </div>
                         <div id="load">  </div>
                     </div>
-                    <script src="./preview_code.js"></script>
+                    <script src="https://grcodeclub.github.io/javascript/preview_code.js"></script>
             </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
 
