--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <meta property="og:image" content="https://grcodeclub.github.io/file/background/3.png"/>
         <meta property="og:title" content="Προγραμματισμός">
-        <script src="https://grcodeclub.github.io/javascript/jquery.js"></script>
+        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
         <script src="https://grcodeclub.github.io/programming/menu.js"></script>
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/header_and_footer.css">
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/main.css">
@@ -86,7 +86,7 @@
         <!-- Footer -->
         <footer>
             <table class="add_footer"></table>
-            <script src="https://grcodeclub.github.io/javascript/footer.js"></script>       
+            <script src="https://grcodeclub.github.io/js/footer.js"></script>       
         </footer>
     </body>
 </html>
