--- a/sql.html
+++ b/sql.html
@@ -4,9 +4,9 @@
         <meta property="og:image" content="https://grcodeclub.github.io/file/background/3.png"/>
         <meta property="og:title" content="Προγραμματισμός | SQL">
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/prism.css" />
-        <script src="https://grcodeclub.github.io/javascript/prism.js"></script>
+        <script src="https://grcodeclub.github.io/js/prism.js"></script>
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/code_bg.css">
-        <script src="https://grcodeclub.github.io/javascript/jquery.js"></script>
+        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
         <script src="https://grcodeclub.github.io/programming/menu.js"></script>
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/header_and_footer.css">
         <link rel="stylesheet" href="https://grcodeclub.github.io/css/main.css">
@@ -182,7 +182,7 @@
         <!-- Footer -->
         <footer>
             <table class="add_footer"></table>
-            <script src="https://grcodeclub.github.io/javascript/footer.js"></script>       
+            <script src="https://grcodeclub.github.io/js/footer.js"></script>       
         </footer>
     </body>
 </html>
