--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
                 <p>                   
                     Ο προγραμματισμός επιτρέπει στους προγραμματιστές να δημιουργούν λογισμικό, εφαρμογές, ιστοσελίδες και πολλά άλλα. Οι γλώσσες προγραμματισμού μπορούν να είναι γενικού σκοπού, όπως η Java, η C++ και η Python, ή ειδικού σκοπού, όπως η SQL για τη διαχείριση βάσεων δεδομένων ή η HTML/CSS για τη δημιουργία ιστοσελίδων.
                 </p>
-                <h2>Συντακτικά λάθη</h2>
+                <h2 class="highlight_blue">Συντακτικά λάθη</h2>
                 <p>Ονομάζουμε τα σφάλματα που σχετίζονται με τη σύνταξη μιας γλώσσας προγραμματισμού.</p>
-                <h2>Αλγόριθμος</h2>
+                <h2 class="highlight_blue">Αλγόριθμος</h2>
                 <p>Αλγόριθμο ονομάζουμε ένα σύνολο εντολών (οδηγιών) που, αν εκτελεστούν με ακρίβεια, οδηγούν στην πραγματοποίηση μιας εργασίας ή την επίλυση ενός προβλήματος.</p>
-                <h2>Κύκλος Ζωής Εφαρμογών</h2>
+                <h2 class="highlight_blue">Γλώσσα υψηλού επιπέδου και Γλώσσα χαμηλού επιπέδου</h2>
+                <p>Η γλώσσα υψηλού επιπέδου θεωρείται η γλώσσα εκείνη που είναι αρκετά περιγραφική και που είναι έτσι πιο κοντά στην ανθρώπινη γραπτή γλώσσα και σαν γλώσσα χαμηλού επιπέδου θεωρείται εκείνη που είναι πιο κοντά στη μηχανή.</p>
+                <h2 class="highlight_blue">Κύκλος Ζωής Εφαρμογών</h2>
                 <p>Μια εφαρμογή ξεκινάει τον κύκλο ζωής της από τη στιγμή που θα καθοριστούν οι απαιτήσεις και οι προδιαγραφές της, και τελειώνει, όταν εξαντληθούν τα περιθώρια συντήρησής της</p>
                 <ol>
                     <li>Ανάλυση</li>
