--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                 <p>Αλγόριθμο ονομάζουμε ένα σύνολο εντολών (οδηγιών) που, αν εκτελεστούν με ακρίβεια, οδηγούν στην πραγματοποίηση μιας εργασίας ή την επίλυση ενός προβλήματος.</p>
                 <h2 class="highlight_blue">Γλώσσα υψηλού επιπέδου και Γλώσσα χαμηλού επιπέδου</h2>
                 <p>Η γλώσσα υψηλού επιπέδου θεωρείται η γλώσσα εκείνη που είναι αρκετά περιγραφική και που είναι έτσι πιο κοντά στην ανθρώπινη γραπτή γλώσσα και σαν γλώσσα χαμηλού επιπέδου θεωρείται εκείνη που είναι πιο κοντά στη μηχανή.</p>
+                <h2 class="highlight_blue">Μεταβλητή</h2>
+                <p>Μεταβλητή είναι μια θέση μνήμης στον υπολογιστή την οποία έχουμε δεσμεύσει και της έχουμε ορίσει ένα όνομα. Το περιεχόμενο αυτής της θέσης μνήμης είναι η τιμή της συγκεκριμένης μεταβλητής. </p>
+                <h2 class="highlight_blue">Loop (επαναλήψεις)  με χρήση For</h2>
+                <p>Την εντολή  for την χρησιμοποιούμε σε ένα loop όταν γνωρίζουμε τον αριθμό επαναλήψεων. </p>
+                <h2 class="highlight_blue">Loop (επαναλήψεις)  με χρήση While</h2>
+                <p>Την εντολή while την χρησιμοποιούμε:
+                    <ol>
+                        <li>όταν θέλουμε να γίνετε ένα loop για όσο  ισχύει μια συνθήκη που έχουμε ορίσει.</li>
+                        <li>Μπορούμε να την χρησιμοποιήσουμε ακόμα και όταν γνωρίζουμε τον αριθμό επαναλήψεων. Για να πραγματοποιήσουμε κάνουμε χρήση ενός μετρητή, για να μετράμε τις επαναλήψεις και με μια συνθήκη ελέγχουμε αν έχουμε κάνει τον αριθμό επαναλήψεων που επιθυμούμε. (π.χ. ο μετρητής i (στην αρχή i=0) αυξάνετε στο τέλος κάθε επανάληψης +1 και στο while υπάρχει η συνθήκη (i<9) ώστε να ελέγχει αν έχουν γίνει 9 επαναλήψεις.)</li>
+                    </ol>
+                </p>
+
                 <h2 class="highlight_blue">Κύκλος Ζωής Εφαρμογών</h2>
                 <p>Μια εφαρμογή ξεκινάει τον κύκλο ζωής της από τη στιγμή που θα καθοριστούν οι απαιτήσεις και οι προδιαγραφές της, και τελειώνει, όταν εξαντληθούν τα περιθώρια συντήρησής της</p>
                 <ol>
