--- a/practice.html
+++ b/practice.html
@@ -24,7 +24,7 @@
                         <tr>
                             <td><img src="https://grcodeclub.github.io/file/logo_and_graphic/logo.png" class="logo"/></td>
                             <td><h1 class="header_text"><a href="https://grcodeclub.github.io/"><span class="header_text">GrCode Club</span></a></h1></td>
-                            <td><a href="https://github.com/GrCodeClub/programming/edit/main/index.html" target="_blank"><img src="https://grcodeclub.github.io/file/logo_and_graphic/edit.png"  width="60px"></a></td>
+                            <td><a href="https://github.com/GrCodeClub/programming/edit/main/practice.html" target="_blank"><img src="https://grcodeclub.github.io/file/logo_and_graphic/edit.png"  width="60px"></a></td>
                         </tr>
                     </table> 
                 </div> <!--Τέλος Επικεφαλίδας-->
@@ -98,6 +98,7 @@
                     <li>Να γραφεί κώδικας ο οποίος εισάγει από το πληκτρολόγιο 10 ακεραίους αριθμούς και εμφανίζει στην οθόνη τον μεγαλύτερο και τον μικρότερο από αυτούς.</li>
                     <li>Να γραφεί κώδικας ο οποίος εισάγει από το πληκτρολόγιο 10 ακεραίους αριθμούς, υπολογίζει και εμφανίζει στην οθόνη το πλήθος των Θετικών, των Αρνητικών και των Μηδέν.</li>
                     <li>Να γραφεί κώδικας ο οποίος διαβάζει από το πληκτρολόγιο αριθμούς εωσότου δοθεί μηδέν. Υπολογίζει και εμφανίζει στην οθόνη το άθροισμά τους, τον μέσο όρο τους, τον μέγιστο και τον ελάχιστο από αυτούς.</li>
+                    <li>Να γραφεί πρόγραμμα το οποίο θα διαβάζει από το πληκτρολόγιο τους μισθούς Ν προσώπων, όπου Ν ακέραιος αριθμός που θα εισάγεται προηγουμένως. Το πρόγραμμα να εμφανίζει τον μέσο όρο της μισθοδοσίας.</li>
                 </ol>
                 <h3 class="highlight_blue"> ΠΙΝΑΚΕΣ ΚΑΙ ΣΤΗ ΔΙΑΧΕΙΡΙΣΗ ΑΛΦΑΡΙΘΜΗΤΙΚΩΝ.</h3>
                 <ol>
@@ -105,6 +106,22 @@
                     <li>Να γραφεί κώδικας, ο οποίος ορίζει πίνακα ακεραίων 10 θέσεων, τον αρχικοποιεί από το πληκτρολόγιο, υπολογίζει και εμφανίζει στην οθόνη τον μέσο όρο των στοιχείων του.</li>
                     <li>Να γραφεί κώδικας, ο οποίος εισάγει από το πληκτρολόγιο ένα αλφαριθμητικό και το εμφανίζει στην οθόνη κάθετα.</li>
                     <li>Να γραφεί κώδικας, ο οποίος εισάγει από το πληκτρολόγιο ένα αλφαριθμητικό και το εμφανίζει ανεστραμμένο.</li>
+                </ol>
+                <h3 class="highlight_blue">ΣΥΝΑΡΤΗΣΕΙΣ</h3>
+                <ol>
+                    <li>Να γραφεί συνάρτηση υπολογισμού του παραγοντικού X!</li>
+                </ol>
+                <h3 class="highlight_blue">Class</h3>
+                <ol>
+                    <li>Να γραφεί μια class για την περιγραφή προσώπων
+                        <ul>
+                            <li>Όνομα</li>
+                            <li>Επίθετο</li>
+                            <li>Τηλέφωνο</li>
+                            <li>Ηλικία</li>
+                        </ul>
+                    </li>
+                    <li>Να γραφεί μια class Φοιτητή</li>
                 </ol>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
