--- a/docker.html
+++ b/docker.html
@@ -81,9 +81,9 @@
 8b3a2f0d4e25    nginx:latest       "nginx -g 'daemon   2 hours ago     Up 2 hours      0.0.0.0:80->80/tcp   apache</code></pre></div>                
 
                     <ul>
-                        <li>CONTAINER ID: Ο αριθμός του κάθε container στο σύστημά μας. Μπορούμε να τον χρησιμοποιήσουμε για να διαγράψουμε (π.χ. web_server) ένα container αν δε θέλουμε να χρησιμοποιήσουμε το όνομά του.</li>
-                        <li>IMAGE: Η υπηρεσία που τρέχει μέσα σε κάθε container.</li>
-                        <li>CREATED: Πότε δημιουργήθηκε το συγκεκριμένο container.</li>
+                        <li>CONTAINER ID: Ο αριθμός του κάθε container στο σύστημά μας.</li>
+                        <li>IMAGE: Η υπηρεσία που τρέχει το κάθε container.</li>
+                        <li>CREATED: Πότε δημιουργήθηκε το container.</li>
                         <li>STATUS: Εδώ μπορούμε να δούμε αν το container λειτουργεί ή αν είναι σταματημένο.</li>
                         <li>PORTS: Εδώ προβάλλονται τα port στα οποία τρέχει το κάθε container.</li>
                         <li>NAMES: Εδώ είναι τα ονόματα που τους έχουμε δώσει.</li>
