--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
                 <p>                   
                     Ο προγραμματισμός επιτρέπει στους προγραμματιστές να δημιουργούν λογισμικό, εφαρμογές, ιστοσελίδες και πολλά άλλα. Οι γλώσσες προγραμματισμού μπορούν να είναι γενικού σκοπού, όπως η Java, η C++ και η Python, ή ειδικού σκοπού, όπως η SQL για τη διαχείριση βάσεων δεδομένων ή η HTML/CSS για τη δημιουργία ιστοσελίδων.
                 </p>
-                <h2 class="highlight_blue">Συντακτικά λάθη</h2>
+                <h2 class="highlight_black">Συντακτικά λάθη</h2>
                 <p>Ονομάζουμε τα σφάλματα που σχετίζονται με τη σύνταξη μιας γλώσσας προγραμματισμού.</p>
-                <h2 class="highlight_blue">Αλγόριθμος</h2>
+                <h2 class="highlight_black">Αλγόριθμος</h2>
                 <p>Αλγόριθμο ονομάζουμε ένα σύνολο εντολών (οδηγιών) που, αν εκτελεστούν με ακρίβεια, οδηγούν στην πραγματοποίηση μιας εργασίας ή την επίλυση ενός προβλήματος.</p>
-                <h2 class="highlight_blue">Γλώσσα υψηλού επιπέδου και Γλώσσα χαμηλού επιπέδου</h2>
+                <h2 class="highlight_black">Γλώσσα υψηλού επιπέδου και Γλώσσα χαμηλού επιπέδου</h2>
                 <p>Η γλώσσα υψηλού επιπέδου θεωρείται η γλώσσα εκείνη που είναι αρκετά περιγραφική και είναι πιο κοντά στην ανθρώπινη γραπτή γλώσσα. Ενώ γλώσσα χαμηλού επιπέδου θεωρείται εκείνη που είναι πιο κοντά στη μηχανή.</p>
-                <h2 class="highlight_blue">Μεταβλητή</h2>
+                <h2 class="highlight_black">Μεταβλητή</h2>
                 <p>Μεταβλητή είναι μια θέση μνήμης στον υπολογιστή την οποία έχουμε δεσμεύσει και της έχουμε ορίσει ένα όνομα. Το περιεχόμενο της συγκεκριμένης θέσης μνήμης είναι η τιμή της συγκεκριμένης μεταβλητής. </p>
-                <h2 class="highlight_blue">Loop (επαναλήψεις)  με χρήση For</h2>
+                <h2 class="highlight_black">Loop (επαναλήψεις)  με χρήση For</h2>
                 <p>Την εντολή  for την χρησιμοποιούμε σε ένα loop όταν γνωρίζουμε τον αριθμό επαναλήψεων. </p>
-                <h2 class="highlight_blue">Loop (επαναλήψεις)  με χρήση While</h2>
+                <h2 class="highlight_black">Loop (επαναλήψεις)  με χρήση While</h2>
                 <p>Την εντολή while την χρησιμοποιούμε:
                     <ol>
                         <li>όταν θέλουμε να γίνετε ένα loop για όσο  ισχύει μια συνθήκη που έχουμε ορίσει.</li>
@@ -74,7 +74,7 @@
                     </ol>
                 </p>
 
-                <h2 class="highlight_blue">Κύκλος Ζωής Εφαρμογών</h2>
+                <h2 class="highlight_black">Κύκλος Ζωής Εφαρμογών</h2>
                 <p>Μια εφαρμογή ξεκινάει τον κύκλο ζωής της από τη στιγμή που θα καθοριστούν οι απαιτήσεις και οι προδιαγραφές της, και τελειώνει, όταν εξαντληθούν τα περιθώρια συντήρησής της</p>
                 <ol>
                     <li>Ανάλυση</li>
