--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <meta property="og:image" content="https://grcodeclub.gr/file/background/3.png"/>
-        <meta property="og:title" content="Προγραμματισμός">
+        <meta property="og:title" content="GrCode Club | Προγραμματισμός">
         <script src="https://grcodeclub.gr/js/jquery.js"></script>
         <script src="https://grcodeclub.gr/programming/post/menu.js"></script>
         <link rel="stylesheet" href="https://grcodeclub.gr/css/header_and_footer.css">
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://grcodeclub.gr/css/list.css">
         <link rel="stylesheet" href="https://grcodeclub.gr/css/body.css">
         <link rel='icon' type='image/png' href='https://grcodeclub.gr/file/logo/black_logo.png'>
-        <title> GrCode Club</title>
+        <title>GrCode Club</title>
     </head>
 
     <body class="programming">
