--- a/orologia.html
+++ b/orologia.html
@@ -4,8 +4,8 @@
         <meta property="og:title" content="GrCode Club | Προγραμματισμός και Ορολογία">        
         <script src="https://grcodeclub.gr/js/jquery.js"></script>
         <script src="https://grcodeclub.gr/programming/js/menu.js"></script>
-   <script src="https://grcodeclub.github.io/javascript/add-elements/head.js"></script>
-         </head>
+        <script src="https://grcodeclub.github.io/javascript/add-elements/head.js"></script>
+    </head>
 
 
     <body class="programming">
@@ -126,9 +126,6 @@
     </div> <!--ΤΕΛΟΣ container-->
         
         <!-- Footer -->
-        <footer>
-            <table class="add_footer"></table>
-            <script src="https://grcodeclub.gr/js/footer.js"></script>       
-        </footer>
+        <footer id="add_footer"></footer><script src="https://grcodeclub.github.io/javascript/add-elements/footer.js"></script>
     </body>
 </html>
