--- a/markdown.html
+++ b/markdown.html
@@ -119,9 +119,6 @@ int main() {
         </div> <!--Τέλος container-->
         
         <!-- Footer -->
-        <footer>
-            <table class="add_footer"></table>
-            <script src="https://grcodeclub.gr/js/footer.js"></script>       
-        </footer>
+        <footer id="add_footer"></footer><script src="https://grcodeclub.github.io/javascript/add-elements/footer.js"></script>
     </body>
 </html>
